unpackaged/objects/DocuSign_SDK_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings for using the DocuSign REST API.</description>
    <fields>
        <fullName>DocuSign_API_URL__c</fullName>
        <inlineHelpText>Use https://demo.docusign.net/ for developer accounts.</inlineHelpText>
        <label>DocuSign API URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DocuSign_Account_Email__c</fullName>
        <description>DocuSign Account email address created at http://www.docusign.com/developer-center</description>
        <label>DocuSign Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DocuSign_Account_Id__c</fullName>
        <label>DocuSign Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Account_Password__c</fullName>
        <description>Password for account created at http://www.docusign.com/developer-center</description>
        <label>DocuSign Account Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Account_Username__c</fullName>
        <label>DocuSign Account Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Email_Blurb__c</fullName>
        <label>DocuSign Email Blurb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Email_Subject__c</fullName>
        <label>DocuSign Email Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Integrator_Key__c</fullName>
        <description>Integrator key created at http://www.docusign.com/developer-center</description>
        <label>DocuSign Integrator Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Sender_Name__c</fullName>
        <label>DocuSign Sender Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Template_Id__c</fullName>
        <label>DocuSign Template Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>DocuSign SDK Settings</label>
</CustomObject>